Fix line wrapping for > 10 items in an <ol>

--- a/css/editor.css
+++ b/css/editor.css
@@ -61,7 +61,7 @@ body {
 
 .g-body ol li:before,
 .g-body ul li:before {
-  width: 20px;
+  width: 30px;
   display: inline-block;
 }
 
